feat: add register endpoint. implement user and auth unit tests
