# src/auth/auth.controller.ts
@@ -1,8 +1,9 @@
-import { Controller, Post, Request, UseGuards } from '@nestjs/common';
+import { Body, Controller, Post, Request, UseGuards } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { LocalAuthGuard } from '../common/guards/local-auth.guard';
 import { User } from '@prisma/client';
 import { ApiBody, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { CreateUserDto } from '../users/dto/create-user.dto';
 
 @ApiTags('Authentication')
 @Controller('auth')
@@ -38,5 +39,29 @@ export class AuthController {
   login(@Request() req: { user: User }) {
     const user = req.user;
     return this.authService.login(user);
+  }
+
+  @Post('register')
+  @ApiOperation({ summary: 'User registration' })
+  @ApiBody({
+    schema: {
+      type: 'object',
+      properties: {
+        email: { type: 'string', example: 'test@test.com' },
+        password: { type: 'string', example: 'password123' },
+        name: { type: 'string', example: 'John Doe' },
+      },
+    },
+  })
+  @ApiResponse({
+    status: 201,
+    description: 'User registered successfully',
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Bad Request',
+  })
+  register(@Body() user: CreateUserDto) {
+    return this.authService.register(user);
   }
 }
